objects/OdasevaArchivingCaseHierarchy__c.object
<CustomObject>
    <fields>
        <fullName>BatchName__c</fullName>
        <label>BatchName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyRootCaseId__c</fullName>
        <label>HierarchyRootCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OdasevaArchivingCaseHierarchy</label>
    <nameField>
        <label>OdasevaArchivingCaseHierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OdasevaArchivingCaseHierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>